# CeriumUI

./: .gitignore  CMakeLists.txt  LICENSE  README.MD
src/: main.cpp
src/common/math/: Math.hpp  Vector2.h
src/core/: WidgetBased.cpp  WidgetBased.h  WidgetText.cpp  WidgetText.h
src/core/common/: Common.cpp  Common.h  String.cpp  String.h
src/platform/render_api/: R_SAL.h
